# super-simple-kiosk

./: .bumpversion.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_tests.py  wsgi.py
.cursor/rules/: rule-terminal.mdc  super-simple-kiosk.mdc
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
data/: state.json
docs/: api.rst  index.rst  super-simple-kiosk-prd.md
src/super_simple_kiosk/: __init__.py  __main__.py  cli.py
src/super_simple_kiosk/app/: __init__.py  main.py
src/super_simple_kiosk/app/api/: __init__.py  routes.py  schemas.py
src/super_simple_kiosk/app/models/: __init__.py  config.py  display_state.py
src/super_simple_kiosk/app/services/: __init__.py  browser_manager.py  display_manager.py  mqtt_client.py
src/super_simple_kiosk/app/utils/: __init__.py  logging.py  validators.py
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_mqtt_commands.py  test_rotation.py
tests/unit/: __init__.py  test_api_routes.py  test_api_routes_simple.py  test_browser.py  test_cli.py  test_cli_simple.py  test_config.py  test_display.py  test_display_state.py  test_main.py  test_main_simple.py  test_mqtt_client.py  test_validators.py  test_validators_comprehensive.py  test_validators_simple.py
