[tool.poetry]
name = "Super Simple Kiosk"
version = "0.0.1-dev1"
description = "Super Simple Kiosk - Chromium kiosk for Linux boxes"
authors = ["UpDryTwist <tathamg@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UpDryTwist/super-simple-kiosk"
documentation = "https://super-simple-kiosk.readthedocs.io/en/latest/"
keywords = ["super_simple_kiosk"]
homepage = "https://github.com/UpDryTwist/super-simple-kiosk"
packages = [ { include = "super_simple_kiosk", from = "src" } ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=super_simple_kiosk",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "browser: Tests requiring browser automation",
    "mqtt: Tests requiring MQTT broker",
    "api: API tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples", ".venv", "dist", ".ruff_cache", ".github"]

[tool.creosote]
venvs = [".venv"]
paths = ["src", "tests", "utils"]
deps-file = "pyproject.toml"
sections = ["tool.poetry.dependencies"]

[tool.codespell]
ignore-words-list = "Super Simple Kiosk"
uri-ignore-words-list = "Classess"
skip = "pyproject.toml,build,dist,.venv,.git,*.png,*.jpg,*.jpeg,*.gif,*.bmp,*.ico,*.svg,*.pyc,*.pyo,*.pyd,*.so,*.dll,*.dylib,*.exe,*.bin,*.hex,*.obj,*.o,*.a,*.lib,*.dll.a,*.db,*.sqlite,*.sqlite3"

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["src/super_simple_kiosk"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.11"
# TODO: fix for earlier Python versions
# Include this if you're feeling you have too much time on your hands
# typeCheckingMode = "strict"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^2.3.0"
paho-mqtt = "^1.6.1"
selenium = "^4.15.0"
pyyaml = "^6.0.1"
jsonschema = "^4.19.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
pytest = ">=7.4.3,<9.0.0"
pytest-mock = "^3.12.0"
pre-commit = "^4.0.1"
ruff = "^0.8.0"
black = "^24.10.0"
make = "^0.1.6.post2"
codespell = "^2.2.6"
sphinx = ">=7.2.6,<9.0.0"
sphinx-rtd-theme = "^3.0.2"
pyright = "^1.1.390"
pytest-cov = "^6.0.0"
bump-my-version = "^0.33.0"
copier = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
